samples/configvalidation/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-a
  namespace: default
spec:
  hosts:
  - mysvc.default.svc.cluster.local
  http:
  - route:
    - destination:
        host: svc-a.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-a
  namespace: default
spec:
  hosts:
  - mysvc.default.svc.cluster.local
  http:
  - route:
    - destination:
        host: svc-a
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-b
  namespace: default
spec:
  hosts:
  - mysvc.test
  http:
  - route:
    - destination:
        host: svc-a.test2.svc.cluster.local
